add coverage and unittest jobs t ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,19 @@ jobs:
       with:
         name: lib_gpio.a
         path: ${{runner.workspace}}/build/*.a*
+    - name: Test
+      working-directory: ${{runner.workspace}}/build
+      run: GTEST_OUTPUT=xml:results/ GTEST_COLOR=1 ctest -V
+    - name: Upload test results on failure
+      uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: results_xml
+        path: ${{runner.workspace}}/build/results/**/*.xml
+    - name: gcov
+      working-directory: ${{runner.workspace}}/build
+      run: make cov
+    - name: codecov push
+      uses: codecov/codecov-action@v1
+      with:
+        files: ${{runner.workspace}}/build/cov.xml
