--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,31 +26,32 @@ jobs:
     defaults:
       run:
         shell: bash
-    - uses: actions/checkout@v2
-    - name: install dependancies
-      run: python3 -m pip install gcovr
-    - name: Configure CMake
-      run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build
-    - name: Build
-      working-directory: ${{runner.workspace}}/build
-      run: cmake --build .
-    - name: Test
-      working-directory: ${{runner.workspace}}/build
-      run: GTEST_OUTPUT=xml:results/ GTEST_COLOR=1 ctest -V
-    - name: Upload test results on failure
-      uses: actions/upload-artifact@v2
-      if: failure()
-      with:
-        name: results_xml
-        path: ${{runner.workspace}}/build/results/**/*.xml
-    - name: gcov
-      working-directory: ${{runner.workspace}}/build
-      run: make cov
-    - name: codecov push
-      uses: codecov/codecov-action@v1
-      with:
-        files: ${{runner.workspace}}/build/cov.xml
-  cpplint:
+    steps:
+      - uses: actions/checkout@v2
+      - name: install dependancies
+        run: python3 -m pip install gcovr
+      - name: Configure CMake
+        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build
+      - name: Build
+        working-directory: ${{runner.workspace}}/build
+        run: cmake --build .
+      - name: Test
+        working-directory: ${{runner.workspace}}/build
+        run: GTEST_OUTPUT=xml:results/ GTEST_COLOR=1 ctest -V
+      - name: Upload test results on failure
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: results_xml
+          path: ${{runner.workspace}}/build/results/**/*.xml
+      - name: gcov
+        working-directory: ${{runner.workspace}}/build
+        run: make cov
+      - name: codecov push
+        uses: codecov/codecov-action@v1
+        with:
+          files: ${{runner.workspace}}/build/cov.xml
+  cppcheck:
     runs-on: ubuntu-latest
     defaults:
       run:
