--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,19 @@ setup_target_for_coverage_gcovr_xml(
     EXECUTABLE GTEST_COLOR=1 ctest -V
 )
 
-# setup gtest
+# setup gtest and fff
 include(FetchContent)
 FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
 )
-FetchContent_MakeAvailable(googletest)
+FetchContent_Declare(
+  fff
+  GIT_REPOSITORY https://github.com/meekrosoft/fff
+  GIT_TAG 7e09f07e5b262b1cc826189dc5057379e40ce886
+)
+
+FetchContent_MakeAvailable(googletest fff)
 
 enable_testing()
 add_subdirectory(tests)
