--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(lib_gpio LANGUAGES CXX C VERSION "1.0.0" DESCRIPTION "Lightweight Drivers for RPi GPIO")
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
-add_library(lib_gpio STATIC src/pwm.c)
+add_library(lib_gpio STATIC src/pwm.c src/sysfs.c)
 set_target_properties(lib_gpio PROPERTIES VERSION ${PROJECT_VERSION} PREFIX "" SUFFIX ".a.${PROJECT_VERSION}")
 target_include_directories(lib_gpio PUBLIC ${PROJECT_SOURCE_DIR}/include)
 include(GNUInstallDirs)
