--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: install dependancies
         run: python3 -m pip install gcovr
       - name: Configure CMake
-        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build -DBUILD_TYPE=TEST
+        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build -DCMAKE_BUILD_TYPE=Debug
       - name: Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build .
