--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Configure CMake
-        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build
+        run: cmake -S ${{runner.workspace}} -B ${{runner.workspace}}/build
       - name: Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build .
@@ -31,9 +31,9 @@ jobs:
       - name: install dependancies
         run: python3 -m pip install gcovr
       - name: Configure CMake
-        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build -DCMAKE_BUILD_TYPE=Debug
+        run: cmake -S ${{runner.workspace}} -B ${{runner.workspace}}/build -DCMAKE_BUILD_TYPE=Debug
       - name: ========= DEBUG ===========
-        run: sudo apt install tree -y; tree
+        run: tree
       - name: Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build .
