--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Configure CMake
-        run: cmake -S ${{runner.workspace}} -B ${{runner.workspace}}/build
+        run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build
       - name: Build
-        working-directory: ${{runner.workspace}}/build
+        working-directory: $GITHUB_WORKSPACE/build
         run: cmake --build .
       - name: Upload static lib
         uses: actions/upload-artifact@v2
         with:
           name: lib_gpio.a
-          path: ${{runner.workspace}}/build/*.a*
+          path: $GITHUB_WORKSPACE/build/*.a*
   test:
     runs-on: ubuntu-latest
     defaults:
@@ -31,28 +31,28 @@ jobs:
       - name: install dependancies
         run: python3 -m pip install gcovr
       - name: Configure CMake
-        run: cmake -S ${{runner.workspace}} -B ${{runner.workspace}}/build -DCMAKE_BUILD_TYPE=Debug
+        run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build -DCMAKE_BUILD_TYPE=Debug
       - name: ========= DEBUG ===========
         run: tree
       - name: Build
-        working-directory: ${{runner.workspace}}/build
+        working-directory: $GITHUB_WORKSPACE/build
         run: cmake --build .
       - name: Test
-        working-directory: ${{runner.workspace}}/build
+        working-directory: $GITHUB_WORKSPACE/build
         run: GTEST_OUTPUT=xml:results/ GTEST_COLOR=1 ctest -V
       - name: Upload test results on failure
         uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: results_xml
-          path: ${{runner.workspace}}/build/results/**/*.xml
+          path: $GITHUB_WORKSPACE/build/results/**/*.xml
       - name: gcov
-        working-directory: ${{runner.workspace}}/build
+        working-directory: $GITHUB_WORKSPACE/build
         run: make cov
       - name: codecov push
         uses: codecov/codecov-action@v1
         with:
-          files: ${{runner.workspace}}/build/cov.xml
+          files: $GITHUB_WORKSPACE/build/cov.xml
   cppcheck:
     runs-on: ubuntu-latest
     defaults:
