--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Configure CMake
         run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build
       - name: Build
-        working-directory: $GITHUB_WORKSPACE/build
+        working-directory: build
         run: cmake --build .
       - name: Upload static lib
         uses: actions/upload-artifact@v2
@@ -35,10 +35,10 @@ jobs:
       - name: ========= DEBUG ===========
         run: tree
       - name: Build
-        working-directory: $GITHUB_WORKSPACE/build
+        working-directory: build
         run: cmake --build .
       - name: Test
-        working-directory: $GITHUB_WORKSPACE/build
+        working-directory: build
         run: GTEST_OUTPUT=xml:results/ GTEST_COLOR=1 ctest -V
       - name: Upload test results on failure
         uses: actions/upload-artifact@v2
@@ -47,7 +47,7 @@ jobs:
           name: results_xml
           path: $GITHUB_WORKSPACE/build/results/**/*.xml
       - name: gcov
-        working-directory: $GITHUB_WORKSPACE/build
+        working-directory: build
         run: make cov
       - name: codecov push
         uses: codecov/codecov-action@v1
