--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,7 +27,7 @@ foreach(file ${TESTS})
     ${SOURCES}
     ${file}
     ${PROJECT_SOURCE_DIR}/tests/main.cpp)
-  target_link_libraries(${name} gtest_main fff) 
+  target_link_libraries(${name} gtest_main fff merase-static) 
   add_test(NAME ${name} COMMAND ${name})
 endforeach()
 
