--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,17 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+# Add merase library
+include(FetchContent)
+message(STATUS "Fetching static dependancies")
+FetchContent_Declare(
+  merase
+  GIT_REPOSITORY https://github.com/ztnel/merase
+  GIT_TAG v0.1.4
+)
+FetchContent_MakeAvailable(merase)
+
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/.. ${CMAKE_BINARY_DIR}/gpio)
-include_directories(${GPIO_INCLUDES})
+include_directories(${GPIO_INCLUDES} ${MERASE_INCLUDE})
 add_subdirectory(pwm)
+add_subdirectory(sysfs)
