--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Upload static lib
         uses: actions/upload-artifact@v2
         with:
-          name: lib_gpio.a
-          path: ${{github.workspace}}/build/*.a*
+          name: libgpio-static.a
+          path: ${{github.workspace}}/build/bin/
   test:
     runs-on: ubuntu-latest
     defaults:
