--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,9 +76,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug" AND ${STANDALONE})
   append_coverage_compiler_flags()
   set(
     COVERAGE_EXCLUDES
-    "${PROJECT_SOURCE_DIR}/tests/*"
-    "${PROJECT_SOURCE_DIR}/main.c"
-    "${PROJECT_SOURCE_DIR}/build/_deps/*"
+    ${PROJECT_SOURCE_DIR}/tests/*
+    ${PROJECT_SOURCE_DIR}/build/
   )
   setup_target_for_coverage_gcovr_xml(
     NAME cov
