--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install dependancies
-        run: 
+        run:
+          sudo apt install gcc-8
           python3 -m pip install gcovr
       - name: Configure CMake
         run: CC=gcc-8 cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug
